2011-09-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-file-name-handler-alist): Add handler for
	`start-file-process'.
	(tramp-smb-handle-process-file): Tune process name determination.
	Use `tramp-temp-buffer-name'.  Narrow region at point-max.
	(tramp-smb-handle-start-file-process): New defun.

2011-09-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Don't require 'shell.
	(tramp-methods): Fix docstring.
	(tramp-get-remote-tmpdir): Use `tramp-tmpdir', if defined for the
	respective method.

	* tramp-compat.el (top): Require 'shell.

	* tramp-smb.el (tramp-methods): Add `tramp-tmpdir' entry.
	(tramp-smb-winexe-shell-command): Fix docstring.
	(tramp-smb-send-command): Remove argument `remove-prompt'.
	(tramp-smb-wait-for-output): Remove prompt.

2011-09-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-remote-tmpdir): New defun, moved from
	tramp-sh.el.  Return complete remote file name.  Handle "smb"
	case.
	(tramp-make-tramp-temp-file): Adapt call of `tramp-get-remote-tmpdir'.

	* tramp-sh.el (tramp-get-remote-tmpdir): Remove.

	* tramp-smb.el (tramp-smb-handle-process-file): Handle INFILE
	correctly.
	(tramp-smb-send-command): Fix previous patch for correct return
	value.

2011-09-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Require 'shell.  Use `tramp-unload-hook' but
	`tramp-cache-unload-hook' where appropriate.
	(tramp-methods): Rename `tramp-remote-sh' to
	`tramp-remote-shell'.  Add `tramp-remote-shell-args'.
	(tramp-handle-shell-command): New defun, moved from tramp-sh.el.

	* tramp-sh.el (top): Don't require 'shell.
	(tramp-methods): Add `tramp-remote-shell' and
	`tramp-remote-shell-args' entries.
	(tramp-sh-file-name-handler-alist): Use `tramp-handle-shell-command'.
	(tramp-sh-handle-shell-command): Remove.
	(tramp-find-shell, tramp-open-connection-setup-interactive-shell):
	Use `tramp-remote-shell'.

	* tramp-smb.el (tramp-methods): Add `tramp-remote-shell' entry.