@@ -525,39 +525,40 @@ PRESERVE-UID-GID and PRESERVE-SELINUX-CONTEXT are completely ignored."
 (defun tramp-smb-handle-file-attributes (filename &optional id-format)
   "Like `file-attributes' for Tramp files."
   (unless id-format (setq id-format 'integer))
-  (with-parsed-tramp-file-name filename nil
-    (with-file-property v localname (format "file-attributes-%s" id-format)
-      (if (and (tramp-smb-get-share v) (tramp-smb-get-stat-capability v))
-	  (tramp-smb-do-file-attributes-with-stat v id-format)
-	;; Reading just the filename entry via "dir localname" is not
-	;; possible, because when filename is a directory, some
-	;; smbclient versions return the content of the directory, and
-	;; other versions don't.  Therefore, the whole content of the
-	;; upper directory is retrieved, and the entry of the filename
-	;; is extracted from.
-	(let* ((entries (tramp-smb-get-file-entries
-			 (file-name-directory filename)))
-	       (entry (assoc (file-name-nondirectory filename) entries))
-	       (uid (if (equal id-format 'string) "nobody" -1))
-	       (gid (if (equal id-format 'string) "nogroup" -1))
-	       (inode (tramp-get-inode v))
-	       (device (tramp-get-device v)))
+  (ignore-errors
+    (with-parsed-tramp-file-name filename nil
+      (with-file-property v localname (format "file-attributes-%s" id-format)
+	(if (and (tramp-smb-get-share v) (tramp-smb-get-stat-capability v))
+	    (tramp-smb-do-file-attributes-with-stat v id-format)
+	  ;; Reading just the filename entry via "dir localname" is not
+	  ;; possible, because when filename is a directory, some
+	  ;; smbclient versions return the content of the directory, and
+	  ;; other versions don't.  Therefore, the whole content of the
+	  ;; upper directory is retrieved, and the entry of the filename
+	  ;; is extracted from.
+	  (let* ((entries (tramp-smb-get-file-entries
+			   (file-name-directory filename)))
+		 (entry (assoc (file-name-nondirectory filename) entries))
+		 (uid (if (equal id-format 'string) "nobody" -1))
+		 (gid (if (equal id-format 'string) "nogroup" -1))
+		 (inode (tramp-get-inode v))
+		 (device (tramp-get-device v)))
 
-	  ;; Check result.
-	  (when entry
-	    (list (and (string-match "d" (nth 1 entry))
-		       t)       ;0 file type
-		  -1	        ;1 link count
-		  uid	        ;2 uid
-		  gid	        ;3 gid
-		  '(0 0)	;4 atime
-		  (nth 3 entry) ;5 mtime
-		  '(0 0)	;6 ctime
-		  (nth 2 entry) ;7 size
-		  (nth 1 entry) ;8 mode
-		  nil	        ;9 gid weird
-		  inode	        ;10 inode number
-		  device))))))) ;11 file system number
+	    ;; Check result.
+	    (when entry
+	      (list (and (string-match "d" (nth 1 entry))
+			 t)        ;0 file type
+		    -1	           ;1 link count
+		    uid	           ;2 uid
+		    gid	           ;3 gid
+		    '(0 0)	   ;4 atime
+		    (nth 3 entry)  ;5 mtime
+		    '(0 0)	   ;6 ctime
+		    (nth 2 entry)  ;7 size
+		    (nth 1 entry)  ;8 mode
+		    nil	           ;9 gid weird
+		    inode	   ;10 inode number
+		    device)))))))) ;11 file system number
 
 (defun tramp-smb-do-file-attributes-with-stat (vec &optional id-format)
   "Implement `file-attributes' for Tramp files using stat command."
@@ -1061,9 +1062,8 @@ target of the symlink differ."
 		;; NAME must be unique as process name.
 		(setq i (1+ i)
 		      name1 (format "%s<%d>" name i)))
-	      (setq name name1)
 	      ;; Set the new process properties.
-	      (tramp-set-connection-property v "process-name" name)
+	      (tramp-set-connection-property v "process-name" name1)
 	      (tramp-set-connection-property v "process-buffer" buffer)
 	      ;; Activate narrowing in order to save BUFFER contents.
 	      (with-current-buffer (tramp-get-connection-buffer v)
@@ -1082,6 +1082,7 @@ target of the symlink differ."
 		(tramp-compat-set-process-query-on-exit-flag p t)
 		;; Return process.
 		p)))
+
 	;; Save exit.
 	(with-current-buffer (tramp-get-connection-buffer v)
 	  (if (string-match tramp-temp-buffer-name (buffer-name))
@@ -1662,7 +1663,6 @@ Returns nil if an error message has appeared."
 ;;; TODO:
 
 ;; * Error handling in case password is wrong.
-;; * Read password from "~/.netrc".
 ;; * Return more comprehensive file permission string.
 ;; * Try to remove the inclusion of dummy "" directory.  Seems to be at
 ;;   several places, especially in `tramp-smb-handle-insert-directory'.
